manifests/services/e-commerce-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-commerce-web-app-service
spec:
  type: NodePort
  selector:
    app: e-commerce-web-app
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 9090
      nodePort: 31001
