manifests/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-commerce-web-app-ingress
spec: 
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: e-commerce-web-app-service
              port:
                number: 7000
